--- a/src/client/styles/variables.less
+++ b/src/client/styles/variables.less
@@ -8,6 +8,7 @@
 @card-border-color: #80808a;
 
 @login-form-width: 50%;
+@login-form-small-screen-width: 90%;
 @login-form-max-width: 400px;
 
 @chat-height: ~"calc(100vh - 150px)";
